--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3540,7 +3540,7 @@ a.text-theme:hover,
   position: relative;
 }
 .header-icons .searchBoxTggler:hover {
-  color: var(--theme-color);
+  color: #48D1CC;
 }
 .header-icons .searchBoxTggler i {
   font-weight: 700;
